RESOLVED FIXED44501
Deploy adoptPtr in WebCore/editing
https://bugs.webkit.org/show_bug.cgi?id=44501
Summary Deploy adoptPtr in WebCore/editing
Adam Barth
Reported 2010-08-24 01:45:46 PDT
Deploy adoptPtr in WebCore/editing
Attachments
Patch (3.07 KB, patch)
2010-08-24 01:47 PDT, Adam Barth
commit-queue: commit-queue-
Adam Barth
Comment 1 2010-08-24 01:47:19 PDT
Adam Barth
Comment 2 2010-08-24 11:37:42 PDT
Comment on attachment 65237 [details] Patch Clearing flags on attachment: 65237 Committed r65919: <http://trac.webkit.org/changeset/65919>
Adam Barth
Comment 3 2010-08-24 11:37:47 PDT
All reviewed patches have been landed. Closing bug.
WebKit Commit Bot
Comment 4 2010-08-24 11:41:03 PDT
Comment on attachment 65237 [details] Patch Rejecting patch 65237 from commit-queue. Unexpected failure when processing patch! Please file a bug against webkit-patch. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', 'land-attachment', '--force-clean', '--build', '--non-interactive', '--ignore-builders', '--build-style=both', '--quiet', 65237, '--test', '--parent-command=commit-queue', '--no-update']" exit_code: 1 Last 500 characters of output: cgi?id=65237&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=44501&ctype=xml Processing 1 patch from 1 bug. Cleaning working directory Processing patch 65237 from bug 44501. NOBODY (OOPS!) found in /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /Users/eseidel/Projects/CommitQueue/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive).
Darin Adler
Comment 5 2010-08-24 12:30:16 PDT
The call to clear() seems unneeded.
Adam Barth
Comment 6 2010-08-24 13:31:10 PDT
(In reply to comment #5) > The call to clear() seems unneeded. Bug 44548.
Note You need to log in before you can comment on or make changes to this bug.