2010-08-24  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        Deploy adoptPtr in WebCore/editing
        https://bugs.webkit.org/show_bug.cgi?id=44501

        * editing/Editor.cpp:
        (WebCore::Editor::Editor):
        * editing/TextIterator.cpp:
        (WebCore::plainTextToMallocAllocatedBuffer):


Canonical link: https://commits.webkit.org/56698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65919 268f45cc-cd09-0410-ab3c-d52691b4dbfc